API-GATEWAY/03.INGRESSROUTE/002.console-ingressroute.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: console-ingressroute
  namespace: api-gateway-system
spec:
  entryPoints:
  - websecure
  - web
  routes:
  - kind: Rule
    match: PathPrefix(`/`, `/static/`, `/api/resource/`) && Host(`console.tmaxcloud.org`)
    # match: PathPrefix(`/`, `/static/`, `/api/resource/`) 
    services:
    - name: console-service@file
      kind: TraefikService
  # tls: {} # use default tls 
  tls:
    secretName: api-gateway-server-tls
